fixed axios not defined issue

--- a/swapi/index.html
+++ b/swapi/index.html
@@ -11,7 +11,7 @@
 
     <button id="get-residents">Get Residents</button>
 
-    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+    <script src="./node_modules/axios/dist/axios.min.js"></script>
     <script src="main.js"></script>
 </body>
 </html>
