extra extra credit: add a input box so user can type in the planet and get all residents on that planet

--- a/swapi/index.html
+++ b/swapi/index.html
@@ -8,10 +8,15 @@
     <title>Document</title>
 </head>
 <body>
-
-    <button id="get-residents">Get Residents</button>
+    <form id="get-planet">
+        <input type="text"
+        id="planet"
+        placeholder="Enter planet">
+        <button id="get-residents">Get Residents</button>
+    </form>
 
     <script src="./node_modules/axios/dist/axios.min.js"></script>
     <script src="main.js"></script>
+    <div class = "resident"></div>
 </body>
 </html>
